# commit-rs

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Changelog.md  LICENSE.md  README.md
src/: main.rs
